--- a/PacMan/PacMan/Views/GameControl.xaml
+++ b/PacMan/PacMan/Views/GameControl.xaml
@@ -1,37 +1,39 @@
-﻿<UserControl x:Class="PacMan.Views.GameControl"
+<UserControl x:Class="PacMan.Views.GameControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:PacMan.Views"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="430">
-    <UserControl.InputBindings>
-        <KeyBinding Key="Left"  Command="{Binding LeftKeyCommand}"/>
-        <KeyBinding Key="Right"  Command="{Binding RightKeyCommand}"/>
-        <KeyBinding Key="Up"  Command="{Binding UpKeyCommand}"/>
-        <KeyBinding Key="Down"  Command="{Binding DownKeyCommand}"/>
-    </UserControl.InputBindings>
-    <Grid Margin="10">
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition/>
-        </Grid.RowDefinitions>
-        <Grid Grid.Row="0">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="Auto"/>
-                <ColumnDefinition/>
-                <ColumnDefinition Width="Auto"/>
-            </Grid.ColumnDefinitions>
-            <Button Grid.Column="0" Content="{Binding PlayPauseContent}" Command="{Binding PlayPauseCommand}" MinWidth="70"/>
-            <StackPanel Grid.Column="1" Orientation="Horizontal" HorizontalAlignment="Center">
-                <TextBlock Text="Time:" Margin="5"/>
-                <TextBlock Text="{Binding Time, StringFormat={}{0:hh}:{0:mm}:{0:ss}, FallbackValue=00:00:00}" Margin="5"/>
-                <TextBlock Text="Score:" Margin="5"/>
-                <TextBlock Text="{Binding Score}" Margin="5"/>
-            </StackPanel>
-            <Button Grid.Column="2" Content="GameOver" Command="{Binding GameOverCommand}" MinWidth="70"/>
-        </Grid>
-        <ContentControl Grid.Row="1" Content="{Binding GameCanvas}"/>
+  <UserControl.InputBindings>
+    <KeyBinding Key="Left"  Command="{Binding LeftKeyCommand}"/>
+    <KeyBinding Key="Right"  Command="{Binding RightKeyCommand}"/>
+    <KeyBinding Key="Up"  Command="{Binding UpKeyCommand}"/>
+    <KeyBinding Key="Down"  Command="{Binding DownKeyCommand}"/>
+  </UserControl.InputBindings>
+  <Grid Margin="10">
+    <Grid.RowDefinitions>
+      <RowDefinition Height="Auto"/>
+      <RowDefinition/>
+    </Grid.RowDefinitions>
+    <Grid Grid.Row="0">
+      <Grid.ColumnDefinitions>
+        <ColumnDefinition Width="Auto"/>
+        <ColumnDefinition/>
+        <ColumnDefinition/>
+        <ColumnDefinition Width="Auto"/>
+      </Grid.ColumnDefinitions>
+      <Button Grid.Column="0" Content="{Binding PlayPauseContent}" Command="{Binding PlayPauseCommand}" MinWidth="70"/>
+      <StackPanel Grid.Column="1" Orientation="Horizontal" HorizontalAlignment="Center">
+        <TextBlock Text="Time: "/>
+        <TextBlock Text="{Binding Time, StringFormat={}{0:hh}:{0:mm}:{0:ss}, FallbackValue=00:00:00}"/>
+      </StackPanel>
+      <StackPanel Grid.Column="2" Orientation="Horizontal" HorizontalAlignment="Center">
+        <TextBlock Text="Score: "/>
+        <TextBlock Text="{Binding Score}"/>
+      </StackPanel>
+      <Button Grid.Column="3" Content="Game Over" Command="{Binding GameOverCommand}" MinWidth="70"/>
     </Grid>
+    <ContentControl Grid.Row="1" Content="{Binding GameCanvas}"/>
+  </Grid>
 </UserControl>
