--- a/PacMan/PacMan/Views/SettingControl.xaml
+++ b/PacMan/PacMan/Views/SettingControl.xaml
@@ -3,14 +3,13 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:PacMan.Views"
+             xmlns:convertor="clr-namespace:PacMan.Converters"
+             xmlns:validanion="clr-namespace:PacMan.ValidationRules"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="430">
   <UserControl.Resources>
-    <Style TargetType="{x:Type Label}">
-      <Setter Property="Margin" Value="5,0,5,0" />
-      <Setter Property="HorizontalAlignment" Value="Left" />
-    </Style>
+    <CollectionViewSource x:Key="PlayerCollection" Source="{Binding Path=Players}" />
+    <convertor:ScoreIndexConverter x:Key="scoreIndexConverter" />
     <Style TargetType="{x:Type TextBox}">
       <Setter Property="VerticalAlignment" Value="Center" />
       <Setter Property="Margin" Value="0,2,40,2" />
@@ -37,7 +36,7 @@
       <RowDefinition Height="Auto"/>
       <RowDefinition Height="Auto"/>
     </Grid.RowDefinitions>
-    <GroupBox Grid.Row="0" Header="Top Scorers" Margin="5" Padding="5">
+    <GroupBox Grid.Row="0" Header="Top Scorers" MinHeight="220" Margin="5" Padding="5">
       <ListBox ItemsSource="{Binding TopScorers}" HorizontalContentAlignment="Stretch">
         <ListBox.Template>
           <ControlTemplate>
@@ -81,21 +80,28 @@
           <RowDefinition/>
         </Grid.RowDefinitions>
         <TextBlock Grid.Column="0" Grid.Row="0" Text="Select Player" Margin="5"/>
-        <ComboBox Grid.Column="1" Grid.Row="0" DisplayMemberPath="Name" ItemsSource="{Binding Players}" SelectedItem="{Binding CurrentPlayer, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Margin="5"/>
+        <ComboBox Grid.Column="1" Grid.Row="0" DisplayMemberPath="Name" ItemsSource="{Binding Players}" SelectedIndex="{Binding SelectedPlayerIndex, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Margin="5"/>
         <TextBlock Grid.Column="0" Grid.Row="1" Text="Player Score" Margin="5"/>
-        <TextBox Grid.Column="1" Grid.Row="1" Text="{Binding CurrentPlayer.Score}" IsReadOnly="True" Margin="5"/>
+        <Label Grid.Column="1" Grid.Row="1" Margin="5">
+          <Label.Content>
+            <MultiBinding Converter="{StaticResource scoreIndexConverter}">
+              <Binding Path="SelectedPlayerIndex"/>
+              <Binding Path="Players" />
+            </MultiBinding>
+          </Label.Content>
+        </Label>
         <TextBlock Grid.Column="0" Grid.Row="2" Text="New Player Name" Margin="5"/>
         <Button Grid.Column="2" Grid.Row="0" Grid.RowSpan="2" Content="Delete" Command="{Binding DeletePlayerCommand}" VerticalAlignment="Center" Width="50" Margin="5"/>
-        <TextBox Grid.Column="1" Grid.Row="2" Margin="5" LostFocus="TextBox_LostFocus">
+        <TextBox Grid.Column="1" Grid.Row="2" Margin="5" Validation.Error="Validation_Error" GotFocus="TextBox_GotFocus">
           <TextBox.Text>
-            <Binding Path="NewPlayer.Name" Mode="TwoWay" UpdateSourceTrigger="PropertyChanged" NotifyOnValidationError="True">
+            <Binding Path="NewPlayer.Name" Mode="TwoWay" UpdateSourceTrigger="PropertyChanged" ValidatesOnDataErrors="True" NotifyOnValidationError="True">
               <Binding.ValidationRules>
-                <DataErrorValidationRule ValidatesOnTargetUpdated="False" />
+                <validanion:NameValidationRule CurrentCollection="{StaticResource PlayerCollection}"/>
               </Binding.ValidationRules>
             </Binding>
           </TextBox.Text>
         </TextBox>
-        <Button Grid.Column="2" Grid.Row="2" Content="Add" Command="{Binding AddPlayerCommand}" IsEnabled="{Binding NewPlayer.IsEnable}" Width="50" Margin="5"/>
+        <Button Grid.Column="2" Grid.Row="2" Content="Add" Command="{Binding AddPlayerCommand}" IsEnabled="{Binding HasControl, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=UserControl}}" Width="50" Margin="5"/>
       </Grid>
     </GroupBox>
     <GroupBox Grid.Row="2" Header="Plugin" Margin="5" Padding="5">
