--- a/PacMan/PacMan/Views/GameView.xaml
+++ b/PacMan/PacMan/Views/GameView.xaml
@@ -9,7 +9,8 @@
         MinHeight="450"
         MinWidth="440"        
         SizeToContent="WidthAndHeight"
-        Loaded="Window_Loaded">
+        Loaded="Window_Loaded"
+        WindowStartupLocation="CenterScreen">
   <Window.Resources>
     <local:SettingControl x:Key="settingControl"/>
     <local:GameControl x:Key="gameControl"/>
