--- a/PacMan/PacMan/Views/SettingControl.xaml
+++ b/PacMan/PacMan/Views/SettingControl.xaml
@@ -10,6 +10,7 @@
   <UserControl.Resources>
     <CollectionViewSource x:Key="PlayerCollection" Source="{Binding Path=Players}" />
     <convertor:ScoreIndexConverter x:Key="scoreIndexConverter" />
+    <convertor:DeleteEnableConverter x:Key="deleteEnableConverter" />
     <Style TargetType="{x:Type TextBox}">
       <Setter Property="VerticalAlignment" Value="Center" />
       <Setter Property="Margin" Value="0,2,40,2" />
@@ -91,7 +92,7 @@
           </Label.Content>
         </Label>
         <TextBlock Grid.Column="0" Grid.Row="2" Text="New Player Name" Margin="5"/>
-        <Button Grid.Column="2" Grid.Row="0" Grid.RowSpan="2" Content="Delete" Command="{Binding DeletePlayerCommand}" VerticalAlignment="Center" Width="50" Margin="5"/>
+        <Button Grid.Column="2" Grid.Row="0" Grid.RowSpan="2" Content="Delete" Command="{Binding DeletePlayerCommand}" IsEnabled="{Binding Players, Converter={StaticResource deleteEnableConverter}}" VerticalAlignment="Center" Width="50" Margin="5"/>
         <TextBox Grid.Column="1" Grid.Row="2" Margin="5" Validation.Error="Validation_Error" GotFocus="TextBox_GotFocus">
           <TextBox.Text>
             <Binding Path="NewPlayer.Name" Mode="TwoWay" UpdateSourceTrigger="PropertyChanged" ValidatesOnDataErrors="True" NotifyOnValidationError="True">
